# SVG-Creator

./: CMakeLists.txt  Color.cpp  Color.h  Forme.cpp  Forme.h  Point.cpp  Point.h  Polygone.h  Rectangle.cpp  Segment.cpp  Segment.h  main.cpp
Draw/: Draw.cpp  Draw.h
Formes/: Circle.cpp  Circle.h  Forme.cpp  Forme.h  Polygone.cpp  Rectangle.cpp  Rectangle.h
Formes/Circle/: Circle.cpp  Circle.h
Formes/Line/: Line.cpp  Line.h
Formes/Point/: Point.cpp  Point.h
Formes/Polygone/: Polygone.cpp  Polygone.h
Formes/Rectangle/: Rectangle.cpp  Rectangle.h
Utils/Color/: Color.cpp  Color.h
